add welcome section

--- a/css/all.css
+++ b/css/all.css
@@ -141,4 +141,80 @@ a {
     padding: 4px 20px;
     outline: none; }
 
+.welcome {
+  max-height: 660px;
+  height: 100vh;
+  background-image: url(./../../assets/img/index/welcome-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 50px; }
+  .welcome__container {
+    display: flex;
+    height: inherit;
+    max-height: 660px; }
+  .welcome__present {
+    width: 450px;
+    max-height: calc(660px + 50px);
+    height: inherit;
+    background-color: #f1d152;
+    position: relative; }
+  .welcome__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    padding-left: 10%; }
+  .welcome__title {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 110px;
+    line-height: 129px;
+    padding-bottom: 36px; }
+  .welcome__subtitle {
+    padding-top: 26px;
+    position: relative; }
+    .welcome__subtitle::before {
+      content: "";
+      width: 185px;
+      height: 1px;
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-color: #5da399; }
+
+.welcome-slider {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 150%;
+  height: 100%;
+  transform: translate(-50%, -50%); }
+
+.slick-list {
+  overflow: hidden; }
+
+.slick-track {
+  display: flex;
+  align-items: center; }
+
+.slick-dots {
+  position: absolute;
+  right: 0;
+  display: flex;
+  gap: 30px; }
+  .slick-dots li {
+    list-style: none; }
+    .slick-dots li.slick-active button {
+      background-color: #f1d152; }
+  .slick-dots button {
+    font-size: 0;
+    width: 10px;
+    height: 10px;
+    background-color: #363838;
+    border-radius: 50%;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: all 0.25s; }
+
 /*# sourceMappingURL=all.css.map */
