--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,6 +1,11 @@
-@import "variables.scss";
-@import "typography.scss";
-@import "components.scss";
-@import "header.scss";
-@import "footer.scss";
-@import "index/welcome.scss";
+@import "./variables.scss";
+@import "./typography.scss";
+@import "./components.scss";
+@import "./header.scss";
+@import "./footer.scss";
+@import "./index/welcome.scss";
+@import "./index/individuality.scss";
+@import "./gallery-line.scss";
+@import "./index/specific.scss";
+@import "./index/how-we-work.scss";
+@import "./gallery.scss";
