--- a/scss/components.scss
+++ b/scss/components.scss
@@ -39,3 +39,10 @@
   margin: 0 auto;
   padding: 0 10px;
 }
+
+.devider {
+  max-width: 252px;
+  width: 100%;
+  height: 1px;
+  background-color: $title;
+}
