--- a/scss/all.scss
+++ b/scss/all.scss
@@ -9,3 +9,5 @@
 @import "./index/specific.scss";
 @import "./index/how-we-work.scss";
 @import "./gallery.scss";
+@import "./breadcrums.scss";
+@import "./info.scss";
