--- a/css/all.css
+++ b/css/all.css
@@ -349,4 +349,37 @@ a {
     .gallery__item > img:hover {
       transform: scale(1.15); }
 
+.breadcrumbs {
+  background-image: url(./../assets/img/breadcrumbs-bg.jpg);
+  height: 338px;
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .breadcrumbs__container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 55px;
+    background-color: rgba(163, 162, 162, 0.5); }
+  .breadcrumbs__item {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 55px;
+    color: #595758; }
+
+.info {
+  padding: 50px 0; }
+  .info > h2 {
+    width: 100%;
+    max-width: 800px; }
+  .info__block {
+    padding-left: 20%;
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; }
+
 /*# sourceMappingURL=all.css.map */
