--- a/scss/all.scss
+++ b/scss/all.scss
@@ -11,3 +11,5 @@
 @import "./gallery.scss";
 @import "./breadcrums.scss";
 @import "./info.scss";
+@import "./decoration.scss";
+@import "./about/our.scss";
