--- a/scss/about/our.scss
+++ b/scss/about/our.scss
@@ -2,23 +2,27 @@
 
 .our {
   background-color: $acs2;
-
+  position: relative;
+  height: 366px;
+  margin-bottom: 50px;
   &__container {
     display: flex;
   }
 
   &__picture {
-    margin-left: -200px;
+    // margin-left: -180px;
+    margin-top: -180px;
   }
 
   &__picture-img {
   }
 
   &__info {
+    margin-top: -190px;
   }
 
   &__title {
-    margin-top: -200px;
+    // margin-top: -200px;
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
@@ -32,5 +36,58 @@
     font-size: 16px;
     line-height: 27px;
     margin-top: 24px;
+  }
+}
+
+.progressbar {
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 34px;
+  &__item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 14px;
+  }
+
+  &__info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__name {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 23px;
+    color: $title;
+  }
+
+  &__count {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 23px;
+    color: $title;
+  }
+
+  &__line {
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: $white;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 80%;
+      height: 2px;
+      background-color: $title;
+    }
   }
 }
