--- a/scss/info.scss
+++ b/scss/info.scss
@@ -15,3 +15,12 @@
     gap: 20px;
   }
 }
+
+@include tablet() {
+  .info {
+    padding: 20px 5px;
+    &__block {
+      padding-left: initial;
+    }
+  }
+}
