--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -35,3 +35,21 @@ a {
   text-decoration: none;
   color: $element;
 }
+
+@include tablet() {
+  h1 {
+    font-size: 42px;
+    line-height: 130%;
+  }
+}
+@include mobile-large() {
+  h2 {
+    font-size: 24px;
+    line-height: 130%;
+  }
+}
+@include mobile-medium() {
+  h1 {
+    font-size: 32px;
+  }
+}
